changed connection string

--- a/RunCutWeb/RunCutWeb/appsettings.json
+++ b/RunCutWeb/RunCutWeb/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-L7D8TNU;Database=RunCutWebDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
-  },
+      "DefaultConnection": "Server=tcp:runcut.database.windows.net,1433;Initial Catalog=RunCutWebDb;Persist Security Info=False;User ID=runcutadmin;Password=Digital#7788;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
